--- a/Pipfile
+++ b/Pipfile
@@ -7,6 +7,11 @@ name = "pypi"
 zappa = ">=0.48.2,<0.49.0"
 
 [dev-packages]
+pytest = "*"
+flake8 = "*"
+pylint = "*"
+pydocstyle = "*"
+coverage = "*"
 
 [requires]
 python_version = "3.6"
