--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,7 +13,7 @@ jobs:
       - run: sudo chown -R circleci:circleci /usr/local/bin
       - run: sudo chown -R circleci:circleci /usr/local/lib/python3.7/site-packages
       - restore_cache:
-          key: deps-v1-{% raw %}{{ .Branch }}-{{ checksum "Pipfile.lock" }}{% endraw %}
+          key: deps-v1-{{ .Branch }}-{{ checksum "Pipfile.lock" }}
       - run:
           name: Upgrade pipenv
           command: |
@@ -23,7 +23,7 @@ jobs:
           command: |
             pipenv sync --dev
       - save_cache:
-          key: deps-v1-{% raw %}{{ .Branch }}-{{ checksum "Pipfile.lock" }}{% endraw %}
+          key: deps-v1-{{ .Branch }}-{{ checksum "Pipfile.lock" }}
           paths:
             - "/home/circleci/.aws"
             - "/home/circlci/.local"
